--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.8",
         "tailwindcss": "^2.0.3"
+    },
+    "dependencies": {
+        "@tailwindcss/typography": "^0.4.0"
     }
 }
